--- a/.github/workflows/wheels.yml
+++ b/.github/workflows/wheels.yml
@@ -37,7 +37,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-24.04-arm, ubuntu-latest, windows-2022, macos-latest]
+        os: [ubuntu-24.04-arm, ubuntu-latest, windows-2022, macos-14]
 
     steps:
     - uses: actions/checkout@v4
