--- a/.github/workflows/pip.yml
+++ b/.github/workflows/pip.yml
@@ -12,7 +12,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [windows-latest, macos-latest, ubuntu-latest]
+        platform: [windows-latest, macos-14, ubuntu-latest]
         python-version: ["3.8", "3.11"]
 
     runs-on: ${{ matrix.platform }}
